--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/chainlink-contracts"]
+	path = lib/chainlink-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts.git
